# nexus-ws

./: .gitignore  pyproject.toml
example/: binance_subscribe.py  bybit_private.py  bybit_subscribe.py  okx_subscribe.py
src/nexus_ws/: __init__.py  binance.py  bybit.py  okx.py  ws.py
